<resources>
    <string name="app_name">Primal Lifestyle</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_quiz_question">Primal Test (%1$d/%2$d)</string>
    <string name="home_second">Home Second</string>
    <string name="quizErgebnisText">Dein Ergebnis:</string>
    <string name="primallifestylelogo">primalLifestyleLogo</string>
    <string name="score">score</string>
    <string name="autoBMI">Dein BMI</string>
    <string name="CaloriesHint">Dein Kalorienbedarf</string>
    <string name="primal_score">Dein Primal Ergebnis</string>


    <!-- MENU & NAVIGATION -->
    <string name="nav_header_title">Primal Lifestyle</string>
    <string name="nav_header_subtitle">Es liegt in deiner Natur!</string>
    <string name="menu_home">Home</string>
    <string name="menu_myprofile">Mein Profil</string>
    <string name="quiz_text">Quiz</string>
    <string name="menu_training">Trainingspläne</string>
    <string name="menu_bmi">BMI-Rechner</string>
    <string name="menu_myprofile_edit">Mein Profil ändern</string>
    <string name="menu_calories_calc">Kalorienbedarfsrechner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- BUTTONS -->
    <string name="action_settings">Settings</string>
    <string name="submit_button">Weiter</string>
    <string name="next_match">Erneut antworten</string>
    <string name="save_button">Speichern</string>
    <string name="edit_button">Ändern</string>
    <string name="abbrechen">Abbrechen</string>
    <string name="score_im_profil_speichern">Score im Profil speichern</string>
    <string name="start_button">Start</string>


    <!-- EDITABLE-->
    <string name="editWeight">Gib dein Gewicht ein</string>
    <string name="editName">Gib deinen Namen ein</string>
    <string name="editUsername">Gib deinen Usernamen ein</string>
    <string name="editAge">Gib dein Alter ein</string>
    <string name="editHeight">Gib deine Größe ein</string>
    <string name="editGender">Wähle dein Geschlecht</string>
    <string-array name="arrayGender">
        <item>Männlich</item>
        <item>Weiblich</item>
    </string-array>


    <!-- LABELS -->
    <string name="labelWeight">Gewicht in kg</string>
    <string name="labelName">Dein Name</string>
    <string name="labelUsername">Username</string>
    <string name="labelAge">Alter</string>
    <string name="labelHeight">Größe in cm</string>
    <string name="labelGender">Geschlecht</string>
    <string name="labelBMI">BMI</string>
    <string name="labelCalories">Kalorienbedarf</string>
    <string name="labelScore">Primal Score</string>


    <!-- ******* TRAININGSPLÄNE ******* -->

    <!-- TRAINING 1-->
    <string name="info_training1">Dauer: 12–24 Minuten\nFür Einsteiger mit schlechter Beweglichkeit\nbenötigt Stuhl und Handtuch\nArt: Zirkeltraining</string>
    <string name="trainingsplan_1">Trainingsplan 1</string>

    <!-- TRAINING 2-->
    <string name="info_training2">Dauer: 18–30 Minuten\nFür Einsteiger mit guter Körperspannung\nbenötigt Stuhl, Matte, 2 Flaschen, 6er Pack\nArt: Zirkeltraining</string>
    <string name="trainingsplan_2">Trainingsplan 2</string>

    <!-- TRAINING 3-->
    <string name="info_training3">Dauer: 22–38 Minuten\nFür Fortgeschrittene mit guter Technik\nbenötigt Stuhl, Tisch, Matte, 2 Flaschen, 6er Pack\nArt: Zirkeltraining</string>
    <string name="trainingsplan_3">Trainingsplan 3</string>

    <!-- TRAINING 4-->
    <string name="info_training4">Dauer: 40–58 Minuten\nFür Fortgeschrittene | funktionell\nbenötigt Stuhl, Matte, Handtuch, 6er Pack\nArt: Zirkeltraining</string>
    <string name="trainingsplan_4">Trainingsplan 4</string>
    <string name="alter_in_jahren">Alter in Jahren</string>
    <string name="bmi_rechner">BMI Rechner</string>
    <string name="der_bmi_body_mass_index_sagt_aus_in_welchem_verh_ltnis_das_k_rpergewicht_zur_k_rpergr_e_steht_es_handelts_sich_um_keinen_idealwert_und_keine_vorgabe_dein_bmi_wert_soll_nur_ein_indikator_sein_da_kein_bmi_die_muskelmasse_nicht_ber_cksichtig_wird_kann_bei_trainierten_personen_ein_h_herer_wert_angezeigt_werden_da_die_muskelmasse_viel_mehr_wiegt_als_fettgewebe">Der BMI (Body Mass Index) sagt aus, in welchem Verhältnis das Körpergewicht zur Körpergröße steht. Es handelt sich um keinen Idealwert und keine Vorgabe. Dein BMI Wert soll nur ein Indikator sein. Da beim BMI die Muskelmasse nicht berücksichtig wird, kann bei trainierten Personen ein höherer Wert angezeigt werden, da die Muskelmasse viel mehr wiegt als das Fettgewebe.</string>
    <string name="k_rpergr_e_in_cm">Körpergröße in cm</string>
    <string name="gewicht_in_kg">Gewicht in kg</string>
    <string name="dein_bmi_wert_ist">Dein BMI Wert ist:</string>
    <string name="_0">0</string>
    <string name="berechnen">Berechnen</string>
    <string name="mainmenulogo">mainmenulogo</string>
    <string name="fragment_trplan1">Trainingsplan 1</string>
    <string name="trplan2Fragment">Trainingsplan 2</string>


</resources>
