<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/house"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_myprofile"
            android:icon="@drawable/user"
            android:title="@string/menu_myprofile" />
        <item
            android:id="@+id/nav_quizFragment"
            android:icon="@drawable/check"
            android:title="@string/quiz_text" />
        <item
            android:id="@+id/nav_training"
            android:icon="@drawable/ic_action_name"
            android:title="@string/menu_training" />

        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/bmi"
            android:title="@string/menu_bmi" />

        <item
            android:id="@+id/nav_calories"
            android:icon="@drawable/calories"
            android:title="@string/menu_calories_calc" />
    </group>
</menu>
