<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trainingsplan.TrainingsplanFragment">

    <!--    TRAININGSPLAN 1-->

    <TextView
        android:id="@+id/trainingsplan1ID"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/trainingsplan_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/labelInfoTraining1"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonTrainingsplan1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/trainingsplan1ID" />

    <TextView
        android:id="@+id/labelInfoTraining1"
        android:layout_width="347dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="70dp"
        android:text="@string/info_training1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--    TRAININGSPLAN 2-->

    <TextView
        android:id="@+id/labelInfoTraining2"
        android:layout_width="344dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/info_training2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelInfoTraining1" />

    <Button
        android:id="@+id/buttonTrainingsplan2"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/trainingsplan2ID" />

    <TextView
        android:id="@+id/trainingsplan2ID"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/trainingsplan_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/labelInfoTraining2"
        app:layout_constraintStart_toStartOf="parent" />

    <!--    TRAININGSPLAN 3-->

    <TextView
        android:id="@+id/labelInfoTraining3"
        android:layout_width="347dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/info_training3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelInfoTraining2" />

    <TextView
        android:id="@+id/trainingsplan3ID"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/trainingsplan_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/labelInfoTraining3"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonTrainingsplan3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/trainingsplan3ID" />

    <!--    TRAININGSPLAN 4-->

    <TextView
        android:id="@+id/labelInfoTraining4"
        android:layout_width="344dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="24dp"
        android:text="@string/info_training4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelInfoTraining3"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/trainingsplan4ID"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/trainingsplan_4"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/labelInfoTraining4"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonTrainingsplan4"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/start_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/trainingsplan4ID" />
</androidx.constraintlayout.widget.ConstraintLayout>