<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.bmi.BMIFragment">


    <TextView
        android:id="@+id/text_bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bmi_rechner"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="363dp"
        android:layout_height="127dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:text="@string/der_bmi_body_mass_index_sagt_aus_in_welchem_verh_ltnis_das_k_rpergewicht_zur_k_rpergr_e_steht_es_handelts_sich_um_keinen_idealwert_und_keine_vorgabe_dein_bmi_wert_soll_nur_ein_indikator_sein_da_kein_bmi_die_muskelmasse_nicht_ber_cksichtig_wird_kann_bei_trainierten_personen_ein_h_herer_wert_angezeigt_werden_da_die_muskelmasse_viel_mehr_wiegt_als_fettgewebe"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titel" />

    <TextView
        android:id="@+id/cm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/k_rpergr_e_in_cm"
        app:layout_constraintBottom_toBottomOf="@+id/cm_value"
        app:layout_constraintStart_toStartOf="@+id/desc"
        app:layout_constraintTop_toTopOf="@+id/cm_value"
        app:layout_constraintVertical_bias="0.314" />

    <EditText
        android:id="@+id/cm_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/cm"
        app:layout_constraintTop_toBottomOf="@+id/desc" />

    <TextView
        android:id="@+id/kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gewicht_in_kg"
        app:layout_constraintBottom_toBottomOf="@+id/kg_value"
        app:layout_constraintStart_toStartOf="@+id/cm"
        app:layout_constraintTop_toTopOf="@+id/kg_value" />

    <EditText
        android:id="@+id/kg_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/kg"
        app:layout_constraintTop_toBottomOf="@+id/cm_value" />

    <Button
        android:id="@+id/berechnen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="250dp"
        android:text="@string/berechnen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kg_value"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/bmi_result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/dein_bmi_wert_ist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/berechnen" />

    <TextView
        android:id="@+id/bmi_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bmi_result_text" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>